Tested Teacher's endpoint API and generated API documentation
