# config/routes.rb
@@ -12,9 +12,10 @@ Rails.application.routes.draw do
   # root "articles#index"
   namespace :api do
     namespace :v1 do
-      resources :courses
-      resources :teachers 
-      resources :reservations
+      resources :courses do
+        resources :teachers 
+        resources :reservations
+      end
     end
   end
   # Define your application routes per the DSL in https://guides.rubyonrails.org/routing.html
